# typing_game

./: CMakeLists.txt
src/: gui.cpp  gui.h  main.cpp  render.cpp  render.h
